--- a/index.html
+++ b/index.html
@@ -4,77 +4,51 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>For Kamran</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&family=Homemade+Apple&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: #f7f6f3;
-      color: #111;
-      line-height: 1.6;
-    }
-    .section {
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 80px 24px;
-    }
-    h1, h2 {
+      height: 100vh;
+      background: #f7e6ec;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
       font-family: 'Playfair Display', serif;
-      font-weight: 600;
+      color: #3a1f2d;
     }
+
     h1 {
-      font-size: 2.2rem;
-    }
-    h2 {
+      font-family: 'Homemade Apple', cursive;
       font-size: 1.6rem;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
+
     p {
       font-size: 1rem;
-      margin-bottom: 16px;
+      margin-bottom: 30px;
     }
-    .center {
-      text-align: center;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 12px 28px;
-      border: 1px solid #111;
+
+    a {
       text-decoration: none;
-      color: #111;
+      border: 1px solid #3a1f2d;
+      padding: 10px 28px;
+      color: #3a1f2d;
+      border-radius: 20px;
       font-size: 0.9rem;
-      letter-spacing: 0.5px;
     }
   </style>
 </head>
 <body>
 
-  <section class="section center">
+  <div>
     <h1>This isn’t a Valentine gift.</h1>
     <p>It’s proof I noticed.</p>
-    <a href="#timeline" class="btn">Enter</a>
-  </section>
-
-  <section id="timeline" class="section">
-    <h2>The moments that mattered</h2>
-    <p>[You’ll write this part]</p>
-  </section>
-
-  <section class="section">
-    <h2>What I see in you</h2>
-    <p>[You’ll write this part]</p>
-  </section>
-
-  <section class="section">
-    <h2>One honest letter</h2>
-    <p>[You’ll write this part]</p>
-  </section>
-
-  <section class="section center">
-    <p>Happy Valentine’s Day.</p>
-    <p>— from the woman who noticed everything</p>
-  </section>
+    <a href="noticing.html">Enter</a>
+  </div>
 
 </body>
 </html>
